--- a/frontend/NaariKavach/backend/package.json
+++ b/frontend/NaariKavach/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NaariKavach-backend",
+  "name": "naarikavach-backend",
   "version": "1.0.0",
   "description": "Backend for NaariKavach application",
   "main": "src/app.js",
