--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "devDependencies": {
     "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9"
+    "@types/react-dom": "^19.1.9",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12"
   },
   "dependencies": {
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "tailwind": "^4.0.0"
   }
 }
