--- a/structure/Folders/frontend/package.json
+++ b/structure/Folders/frontend/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "naarikavach-frontend",
+  "name": "naari-kavach-frontend",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "react-router-dom": "^5.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.27.1"
+    "vite": "^5.3.1",
+    "tailwindcss": "^4.1.13",
+    "postcss": "^8.5.6",
+    "autoprefixer": "^10.4.21"
   }
 }
