--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/react": "^19.1.17",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
+    "react": "^19.1.1",
+    "react-router-dom": "^7.9.3",
     "tailwindcss": "^3.4.10",
     "vite": "^7.1.5"
   }
